cf.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Academy Demo CloudFormation
Parameters:
  LatestAmiId:
    Type: "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>"
    Default: "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
  ALBSubnetList:
    Type: List<AWS::EC2::Subnet::Id>
    Default: subnet-05dc5323a90701745,subnet-0462080141c44392d
  VPC:
    Type: AWS::EC2::VPC::Id
    Default: vpc-02f0416e2af96dc4e
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
Resources:
  LindaS3CF:
    Type: AWS::S3::Bucket
  MyQueue:
    Type: AWS::SQS::Queue
    Properties:
      QueueName: LindaSQS

  LindaALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow all incoming from anywhere to HTTPS and HTTP
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
        - CidrIp: 0.0.0.0/0
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      Tags:
        - Key: Name
          Value: LindaALBSecurityGroup
      VpcId: !Ref VPC
  LindaEC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow port 80 from ALB SG
      SecurityGroupIngress:
        - SourceSecurityGroupId: !Ref LindaALBSecurityGroup
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      Tags:
        - Key: Name
          Value: LindaEC2SecurityGroup

  Ec2Instance:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref InstanceTypeParameter
      Tags:
        - Key: Name
          Value: Linda-CF
      SecurityGroups:
        - !Ref LindaEC2SecurityGroup
  LindaALBInstance:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: LindaALBcf
      Scheme: internet-facing
      Subnets: !Ref ALBSubnetList
      SecurityGroups:
        - !Ref LindaALBSecurityGroup
Outputs:
  ALBDNSAddress:
    Description: Gets DNS address of the ABL
    Value: !GetAtt LindaALBInstance.DNSName
